fix GUI font: switch to bundled Helvetica and realign labels

--- a/src/usv_playpen/_config/gui_style_sheet.css
+++ b/src/usv_playpen/_config/gui_style_sheet.css
@@ -2,6 +2,9 @@ QWidget {
   background-color: white;
   color: #000000;
 }
+QLabel {
+  padding-top: 3px;
+}
 QProgressBar {
   padding: 0px;
   border: 0px;
